--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
         "axios": "^1.7.7",
+        "firebase": "^11.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
