--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/react-dom": "^18.3.1",
         "axios": "^1.7.7",
         "firebase": "^11.0.1",
+        "hamburger-react": "^2.5.1",
         "motion": "^11.11.17",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
